# trash-tui

./: Cargo.toml  README.md
src/: app.rs  events.rs  files.rs  io.rs  list.rs  main.rs  trash_entry.rs  ui.rs  utils.rs
tests/: t.rs
